Add new Version doc

--- a/jade/includes/datepicker-0.3.0.html
+++ b/jade/includes/datepicker-0.3.0.html
@@ -64,15 +64,14 @@
 
 <h3>Fiddle Example</h3>
 <div class="well">
-    <a target="blank" href="http://jsfiddle.net/babareza/DqppC/">Simple Initialize</a> | <a target="blank"
-                                                                                            href="http://jsfiddle.net/babareza/PAg54/">Custom
-    Format</a> | <a target="blank" href="http://jsfiddle.net/babareza/z3G2q/">Formatter Function</a> | <a
-        target="blank"
-        href="http://jsfiddle.net/babareza/Gm7eM/">Alt
-    Field</a> | <a target="blank" href="http://jsfiddle.net/babareza/wjfNG/ ">Engilsh Number</a> | <a target="blank"
-                                                                                                      href="http://jsfiddle.net/babareza/dAhEa/">Custom
-    Position</a> | <a target="blank" href="http://jsfiddle.net/babareza/Vx5TG/">Custom View Mode</a>
-    <br/>
+    <a target="blank" href="http://jsfiddle.net/babareza/DqppC/">Simple Initialize</a> |
+    <a target="blank" href="http://jsfiddle.net/babareza/PAg54/">Custom Format</a> |
+    <a target="blank" href="http://jsfiddle.net/babareza/z3G2q/">Formatter Function</a> |
+    <a target="blank" href="http://jsfiddle.net/babareza/Gm7eM/">Alt Field</a> |
+    <a target="blank" href="http://jsfiddle.net/babareza/wjfNG/ ">Engilsh Number</a> |
+    <a target="blank" href="http://jsfiddle.net/babareza/dAhEa/">Custom Position</a> |
+    <a target="blank" href="http://jsfiddle.net/babareza/Vx5TG/">Custom View Mode</a> |
+    <a target="blank" href="http://jsfiddle.net/babareza/frh5ot43/">Full Configuration</a>
 </div>
 <div class="page-content-box">
 <h3>Quick Example</h3>
