Add new Version doc

--- a/jade/includes/datepicker-0.3.0.html
+++ b/jade/includes/datepicker-0.3.0.html
@@ -114,7 +114,7 @@
 <table class="table table-bordered table-striped table-plugin-options">
 <thead>
 <tr>
-    <th style="width: 160px;">Name</th>
+    <th style="width: 180px;">Name</th>
     <th style="width: 50px;">type</th>
     <th style="width: 100px;">default</th>
     <th>description</th>
@@ -324,10 +324,33 @@
     <td>Object</td>
     <td>--</td>
     <td>
-        text: {
-        btnNextText: "<",
-        btnPrevText: ">"
-        }
+        navigator text object
+    </td>
+</tr>
+
+<tr>
+    <td>
+        <div class="indent"></div>
+        <div class="indent"></div>
+        btnNextText
+    </td>
+    <td>String</td>
+    <td>"<"</td>
+    <td>
+        text of navigator next button
+    </td>
+</tr>
+
+<tr>
+    <td>
+        <div class="indent"></div>
+        <div class="indent"></div>
+        btnPrevText
+    </td>
+    <td>String</td>
+    <td>">"</td>
+    <td>
+        text of navigator previews button
     </td>
 </tr>
 
@@ -397,11 +420,24 @@
     <td>Object</td>
     <td>--</td>
     <td>
-        text: {
-        btnToday: "امروز"
-        }
+        toolbox text object
     </td>
 </tr>
+
+<tr>
+    <td>
+        <div class="indent"></div>
+        <div class="indent"></div>
+        btnToday
+    </td>
+    <td>String</td>
+    <td>"امروز"</td>
+    <td>
+        Text of today button
+    </td>
+</tr>
+
+
 <tr>
     <td>
         <div class="indent"></div>
@@ -610,9 +646,9 @@
 <table class="table table-bordered table-striped table-plugin-options">
     <thead>
     <tr>
-        <th style="width: 150px;">Name</th>
-        <th style="width: 100px;">Arguments</th>
-        <th style="width: 100px;">Description</th>
+        <th style="width: 180px;">Name</th>
+        <th style="width: 360px;">Arguments</th>
+        <th style="width: 160px;">Description</th>
         <th>Sample Code</th>
     </tr>
     </thead>
