Add new Version doc

--- a/jade/includes/datepicker-0.3.0.html
+++ b/jade/includes/datepicker-0.3.0.html
@@ -625,7 +625,7 @@
 <tr>
     <td><b>onlyTimePicker</b></td>
     <td>Boolean</td>
-    <td>--</td>
+    <td>false</td>
     <td>
         if True just show timepicker and other view disabled.
     </td>
@@ -633,7 +633,7 @@
 <tr>
     <td><b>justSelectOnDate</b></td>
     <td>Boolean</td>
-    <td>--</td>
+    <td>true</td>
     <td>
         if True Value of input just change by click on day in day view
     </td>
