Fix favicon refrence

--- a/jade/page/layout.jade
+++ b/jade/page/layout.jade
@@ -2,6 +2,7 @@ doctype transitional
 html( xmlns = "http://www.w3.org/1999/xhtml", lang = "en", 'xml:lang' = "en" )
     title Persian Web Toolkit
     head
+        link(rel='shortcut icon', href='/PersianWebToolkit/img/favicon.png')
         include ../includes/head
         link(rel='stylesheet', href='/PersianWebToolkit/css/menu.css')
         link(rel='stylesheet', href='/PersianWebToolkit/lib/prettify/theme/desert.css')
