Fix favicon refrence

--- a/jade/includes/datepicker-0.3.0.html
+++ b/jade/includes/datepicker-0.3.0.html
@@ -95,7 +95,7 @@
 <h3>Qiuck Start</h3>
 	<pre class="prettyprint lang-html">
 		&lt;head&gt;
-			&lt;link rel="stylesheet" href="css/pwt.datepicker.css"/&gt;
+			&lt;link rel="stylesheet" href="css/persian.datepicker.css"/&gt;
 			&lt;script src="js/jquery.js"&gt;&lt;/script&gt;
 			&lt;script src="js/persian.date.js"&gt;&lt;/script&gt;
 			&lt;script src="js/persian.datepicker.js"&gt;&lt;/script&gt;
