--- a/jade/page/datepicker-demo-0.3.0.jade
+++ b/jade/page/datepicker-demo-0.3.0.jade
@@ -1,10 +1,8 @@
 extends layout
-
 block style
-    link(rel='stylesheet', href='https://cdn.rawgit.com/babakhani/pwt.datepicker/Develop/dist/0.3.0/css/persian-datepicker-0.3.0.min.css')
-
+    link(rel='stylesheet', href='http://rawgithub.com/babakhani/pwt.datepicker/Develop/dist/css/persian-datepicker-0.3.0.min.css')
 block scripts
-    script(src='https://cdn.rawgit.com/babakhani/pwt.datepicker/Develop/dist/0.3.0/js/persian-datepicker-0.3.0.min.js')
+    script(src='http://rawgithub.com/babakhani/pwt.datepicker/Develop/dist/js/persian-datepicker-0.3.0.min.js')
 
 block content
     section#main_content.inner
