--- a/jade/includes/datepicker-0.3.0.html
+++ b/jade/includes/datepicker-0.3.0.html
@@ -1,5 +1,9 @@
 <div class="row">
     <div class="col-xs-8 ">
+        <div class="alert alert-warning" role="alert">
+            New Version released! Try This
+            <a href="/PersianWebToolkit/doc/datepicker/version.html"> Persian Date Picker</a>
+        </div>
         <h1>Persian Date Picker</h1>
         <span class="label label-success">Version 0.3.0</span>
 
@@ -282,15 +286,15 @@
 </tr>
 
 <!--<tr>-->
-    <!--<td>-->
-        <!--<div class="indent"></div>-->
-        <!--changeOnScroll-->
-    <!--</td>-->
-    <!--<td>Boolean</td>-->
-    <!--<td>true</td>-->
-    <!--<td>-->
-        <!--if 'false' set disbale scroll time change-->
-    <!--</td>-->
+<!--<td>-->
+<!--<div class="indent"></div>-->
+<!--changeOnScroll-->
+<!--</td>-->
+<!--<td>Boolean</td>-->
+<!--<td>true</td>-->
+<!--<td>-->
+<!--if 'false' set disbale scroll time change-->
+<!--</td>-->
 <!--</tr>-->
 
 <!-- navigator -->
