--- a/jade/includes/datepicker-demo-0.3.0.html
+++ b/jade/includes/datepicker-demo-0.3.0.html
@@ -86,6 +86,10 @@
     });
 </script>
 <div class="col-xs-12">
+    <div class="alert alert-warning" role="alert">
+        New Version released! Try This
+        <a href="/PersianWebToolkit/doc/datepicker/version.html"> Persian Date Picker</a>
+    </div>
     <h1>Persian Date Picker Demo</h1>
 
     <p>
