--- a/doc/datepicker/0.4.0/include/fiddle.html
+++ b/doc/datepicker/0.4.0/include/fiddle.html
@@ -1,5 +1,5 @@
-<a class="target" name="/use-it/fiddle/"></a>
-<h3><a href="#/use-it/fiddle/"><span class="hash">#</span>Fiddle Example</a><span></span></h3>
+<a class="target" name="/fiddle/"></a>
+<h3><a href="#/fiddle/"><span class="hash">#</span>Fiddle Example</a><span></span></h3>
 <div class="well">
     <a target="blank" href="http://jsfiddle.net/babareza/DqppC/">Simple Initialize</a> |
     <a target="blank" href="http://jsfiddle.net/babareza/PAg54/">Custom Format</a> |
