--- a/doc/datepicker/0.4.0/include/install.html
+++ b/doc/datepicker/0.4.0/include/install.html
@@ -1,8 +1,8 @@
 
 <article class="method">
-    <a class="target" name="/use-it/browser/"></a>
+    <a class="target" name="/install/"></a>
 
-    <h3><a href="#/use-it/bower/"><span class="hash">#</span>Install</a><span></span></h3>
+    <h3><a href="#/install/"><span class="hash">#</span>Install</a><span></span></h3>
 
     <div class="prose">
         <div class="highlight">
