--- a/doc/datepicker/0.4.0/include/method.html
+++ b/doc/datepicker/0.4.0/include/method.html
@@ -1,5 +1,5 @@
-<a class="target" name="/use-it/methods/"></a>
-<h3><a href="#/use-it/options/"><span class="hash">#</span>Methods</a><span></span></h3>
+<a class="target" name="/methods/"></a>
+<h3><a href="#/methods/"><span class="hash">#</span>Methods</a><span></span></h3>
 <table class="table table-bordered table-striped table-plugin-options">
     <thead>
     <tr>
@@ -32,6 +32,15 @@
         <td>Removes the datepicker functionality completely.</td>
         <td>
             <pre class="prettyprint lang-html">$( ".selector" ).pDatepicker( "destroy" );</pre>
+        </td>
+    </tr>
+
+    <tr>
+        <td>setDate</td>
+        <td>Persian Date Array, .Net Date format and ...</td>
+        <td>Set datepicker selected date time.</td>
+        <td>
+            <pre class="prettyprint lang-html">$( ".selector" ).pDatepicker("setDate",[1392,12,1,11,11] );</pre>
         </td>
     </tr>
 
