--- a/doc/datepicker/0.4.0/include/options.html
+++ b/doc/datepicker/0.4.0/include/options.html
@@ -1,6 +1,6 @@
 
-<a class="target" name="/use-it/options/"></a>
-<h3><a href="#/use-it/options/"><span class="hash">#</span>Options</a><span></span></h3>
+<a class="target" name="/options/"></a>
+<h3><a href="#/options/"><span class="hash">#</span>Options</a><span></span></h3>
 <table class="table table-bordered table-striped table-plugin-options">
 <thead>
 <tr>
@@ -570,7 +570,7 @@
     </td>
 </tr>
 
-<!--dsad-->
+
 <tr>
     <td><b>onlyTimePicker</b></td>
     <td>Boolean</td>
@@ -587,6 +587,32 @@
         if True Value of input just change by click on day in day view
     </td>
 </tr>
+<tr>
+    <td>checkDate</td>
+    <td>Function</td>
+    <td>-</td>
+    <td>
+        By using this method you make disable custom dates.
+    </td>
+</tr>
+<tr>
+    <td>checkMonth</td>
+    <td>Function</td>
+    <td>-</td>
+    <td>
+        By using this method you make disable custom Month.
+    </td>
+</tr>
+<tr>
+    <td>checkYear</td>
+    <td>Function</td>
+    <td>-</td>
+    <td>
+        By using this method you make disable custom Year.
+    </td>
+</tr>
+
+
 
 
 </tbody>
