--- a/doc/datepicker/0.4.0/include/quick-sample.html
+++ b/doc/datepicker/0.4.0/include/quick-sample.html
@@ -1,13 +1,14 @@
 <div class="page-content-box">
-    <a class="target" name="/use-it/quciksample/"></a>
+    <a class="target" name="/quciksample/"></a>
 
-    <h3><a href="#/use-it/quciksample/"><span class="hash">#</span>Quick Example</a><span></span></h3>
+    <h3><a href="#/quciksample/"><span class="hash">#</span>Quick Example</a><span></span></h3>
 
     <p>
         Attached to a field with the format specified via options.
     </p>
 
     <div class="well">
+          <div ng-include="'/PersianWebToolkit/doc/datepicker/0.4.0/include/theme-switch.html'"></div>
         <input type="text" class="sample-input form-control" value="02-16-2012" id="example1">
         <script type="text/javascript">
             $("#example1").persianDatepicker();
