--- a/doc/datepicker/0.4.0/include/quick-start.html
+++ b/doc/datepicker/0.4.0/include/quick-start.html
@@ -1,5 +1,5 @@
-<a class="target" name="/use-it/qucikstart/"></a>
-<h3><a href="#/use-it/qucikstart/"><span class="hash">#</span>Quick Start</a><span></span></h3>
+<a class="target" name="/qucikstart/"></a>
+<h3><a href="#/qucikstart/"><span class="hash">#</span>Quick Start</a><span></span></h3>
 	<pre class="prettyprint lang-html">
 		&lt;head&gt;
 			&lt;link rel="stylesheet" href="css/persian.datepicker.css"/&gt;
