--- a/include/head.html
+++ b/include/head.html
@@ -1,30 +1,26 @@
 <!-- Fixed navbar -->
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-                    aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a href="/PersianWebToolkit" class="navbar-brand">
-                <div class="page-logo"></div>
-                Persian Web Toolkit
-            </a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
+            <div class="navbar-header ">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                        aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/">Persian Web Toolkit</a>
+            </div>
+            <ul class="nav navbar-nav pull-right">
                 <li>
-                    <a projectName="persiandate" href="/PersianWebToolkit/doc/persiandate/version.html">Persian Date</a>
+                    <a projectName="persiandate" href="/PersianWebToolkit/doc/persiandate/version.html">Persian
+                        Date</a>
                 </li>
-                <li >
-                    <a href="/PersianWebToolkit/doc/datepicker/version.html" >
+                <li>
+                    <a projectName="datepicker" href="/PersianWebToolkit/doc/datepicker/version.html">
                         Datepicker
                     </a>
                 </li>
             </ul>
-        </div>
     </div>
 </nav>
