--- a/include/head.html
+++ b/include/head.html
@@ -9,7 +9,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">Persian Web Toolkit</a>
+                <a class="navbar-brand" href="/PersianWebToolkit">Persian Web Toolkit</a>
             </div>
             <ul class="nav navbar-nav pull-right">
                 <li>
