Add index.html to doc root

--- a/include/head.html
+++ b/include/head.html
@@ -13,11 +13,11 @@
             </div>
             <ul class="nav navbar-nav pull-right">
                 <li>
-                    <a projectName="persiandate" href="/PersianWebToolkit/doc/persiandate/version.html">Persian
+                    <a projectName="persiandate" href="/PersianWebToolkit/doc/persiandate/">Persian
                         Date</a>
                 </li>
                 <li>
-                    <a projectName="datepicker" href="/PersianWebToolkit/doc/datepicker/version.html">
+                    <a projectName="datepicker" href="/PersianWebToolkit/doc/datepicker/">
                         Datepicker
                     </a>
                 </li>
