--- a/include/footer.html
+++ b/include/footer.html
@@ -1,6 +1,7 @@
-<footer >
+<footer>
     <div class="container">
         <p class="copyright">Persian Web Toolkit maintained by<a href="https://github.com/babakhani"> Reza Babakhani</a>
+            <!--<a href="mailto:babakhani.reza@gmail.com" target="_blank"><i class="fa fa-envelope"></i> Mail</a>-->
             <!--<script type="text/javascript">-->
             <!--var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");-->
             <!--document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));-->
