--- a/src/css/extra.css
+++ b/src/css/extra.css
@@ -4,7 +4,7 @@
 
 .md-header {
     background-color: #222 !important;
-    border-bottom: 3px solid  #2E8B34;
+    border-bottom: 3px solid  #028475;
 }
 
 table td:nth-child(2),
