fix document, add new version alert to pages

--- a/doc/datepicker/0.4.5/include/download.html
+++ b/doc/datepicker/0.4.5/include/download.html
@@ -7,6 +7,13 @@
                     This Date picker work with Iranian calendar.
                 </p>
 
+
+                <div class="alert alert-success">
+                    <a href="http://babakhani.github.io/PersianWebToolkit/docs/datepicker" style="color: green;">
+                        <strong>New version!</strong> New beta version released. check this out.
+                    </a>
+                </div>
+
                 <p>
                     <span>More info  at</span>
                     <a target="blank" href="http://en.wikipedia.org/wiki/Iranian_calendar">http://en.wikipedia.org/wiki/Iranian_calendar</a>
