--- a/doc/persiandate/0.1.8/include/download.html
+++ b/doc/persiandate/0.1.8/include/download.html
@@ -8,6 +8,13 @@
                     dates</strong>
                     System. </p>
 
+
+                <div class="alert alert-success">
+                    <a href="http://babakhani.github.io/PersianWebToolkit/docs/persian-date" style="color: green;">
+                        <strong>New version!</strong> New beta version released. check this out.
+                    </a>
+                </div>
+
                 <p>
                     Inspired by <a href="http://momentjs.com/">moment.js</a>
                     <br/>
