--- a/doc/lib/vue-persian-datepicker/css/datepicker.css
+++ b/doc/lib/vue-persian-datepicker/css/datepicker.css
@@ -2,7 +2,11 @@ a {
     color: #000 !important;
 }
 
-.datepicker-demo-box {
+.navbar{
+    z-index: 100001;
+}
+
+.datepicker-demo-box--fixed{
     position: fixed;
 }
 
