--- a/src/lib/vue-persian-datepicker/css/datepicker.css
+++ b/src/lib/vue-persian-datepicker/css/datepicker.css
@@ -6,8 +6,18 @@ a {
     z-index: 100001;
 }
 
+
 .datepicker-demo-box--fixed{
     position: fixed;
+}
+
+@media only screen and (max-width: 720px) {
+    .datepicker-demo-box--fixed{
+        position: static;
+        margin-bottom: 2em;
+        padding-bottom: 2em;
+        min-height: 450px;
+    }
 }
 
 .datepicker-main {
